<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBackground">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/darkBackground">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                style="@style/DarkCard">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <TextView
                        android:text="@string/About"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_orange_light"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"/>
                    <TextView
                        android:id="@+id/aboutText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="@string/about_text"
                        android:textSize="14sp"
                        android:layout_marginBottom="5dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/credit"
                android:text="@string/credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="18sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="5dp"/>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                style="@style/DarkCard">
                <RelativeLayout
                    android:id="@+id/tmdbCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackgroundBorderless">
                    <ImageButton
                        android:id="@+id/imdbButton"
                        android:contentDescription="@string/tmdb_desc"
                        android:layout_width="@dimen/movie_poster_width"
                        android:layout_height="@dimen/movie_poster_width"
                        android:adjustViewBounds="true"
                        android:background="@drawable/tmdb"
                        android:scaleType="fitCenter" />
                    <TextView
                        android:id="@+id/tmdbText"
                        android:layout_toEndOf="@id/imdbButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/tmdb_text"
                        android:layout_centerVertical="true"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                style="@style/DarkCard">
                <RelativeLayout
                    android:id="@+id/firebaseCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackgroundBorderless">
                    <ImageButton
                        android:id="@+id/fireBaseButton"
                        android:contentDescription="@string/firebase_desc"
                        android:layout_width="@dimen/movie_poster_width"
                        android:layout_height="@dimen/movie_poster_width"
                        android:layout_toEndOf="@id/fireBaseButton"
                        android:adjustViewBounds="true"
                        android:background="@drawable/firebaselogo"
                        android:scaleType="fitCenter" />
                    <TextView
                        android:id="@+id/firebaseText"
                        android:layout_toEndOf="@id/fireBaseButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/firebase_text"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                style="@style/DarkCard">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/Devs"
                        android:text="@string/dev_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_orange_light"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"/>
                    <TextView
                        android:id="@+id/devNames"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="@string/dev_names"
                        android:textSize="14sp"
                        android:layout_marginBottom="5dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp">

                <Button
                    android:id="@+id/FeedbackButton"
                    android:layout_width="170dp"
                    android:layout_height="42dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/Feedback_button"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/ReportIssue"
                    android:layout_width="170dp"
                    android:layout_height="42dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="16sp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/Issue_button"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>