<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darkBackground">

    <TextView
        android:id="@+id/feedbackView5"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="6dp"
        android:text="@string/feedback_text"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/feedbackmessagetext"
        android:layout_width="322dp"
        android:layout_height="118dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textMultiLine"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackView5" />

    <Button
        android:id="@+id/feedbackcancelbutton"
        android:layout_width="137dp"
        android:layout_height="39dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/feedbackSubmitbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackmessagetext" />

    <Button
        android:id="@+id/feedbackSubmitbutton"
        android:layout_width="137dp"
        android:layout_height="39dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackmessagetext" />

</android.support.constraint.ConstraintLayout>