<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/layoutLogin">
    <LinearLayout
        tools:ignore="UselessParent"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:layout_gravity="bottom"
        android:layout_marginBottom="60dp">
        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="@drawable/roundedtextbox"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="@drawable/roundedtextbox"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/login"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>