<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="10dp"
        android:layout_gravity="top"
        style="@style/DarkCard">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_avatar"
                android:textSize="21sp"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar_change_image"
                    android:layout_width="192dp"
                    android:layout_height="192dp"
                    android:src="@drawable/placeholder_med_cast"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorPrimary"
                    android:layout_centerInParent="true"/>
                <ProgressBar
                    android:id="@+id/avatar_change_spinner"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerInParent="true"
                    android:alpha="0.5"/>
            </RelativeLayout>
            <Button
                android:id="@+id/avatar_change_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/upload_image"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textAlignment="center"
                android:background="@drawable/roundedbutton_selector"
                android:enabled="false"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="10dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent">
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/darkBackground"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:background="@android:color/transparent">
            <Button
                android:id="@+id/avatar_change_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textAlignment="center"
                android:background="@drawable/roundedbutton_selector"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"/>
            <Button
                android:id="@+id/avatar_change_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textAlignment="center"
                android:background="@drawable/roundedbutton_selector"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:enabled="false"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>